--- a/pom.xml
+++ b/pom.xml
@@ -9,11 +9,10 @@
         <version>3.2.1</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.example</groupId>
-    <artifactId>system-api</artifactId>
+    <groupId>com.system</groupId>
+    <artifactId>api</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>system-api</name>
-    <description>system-api</description>
+
     <properties>
         <java.version>17</java.version>
         <mybatis.plus.version>3.5.5</mybatis.plus.version>
